# CommitVoice

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample.env
src/commitvoice/: __init__.py  cli.py
src/social_updates/: __init__.py  cli.py
tools/: social_updates.py
