[project]
name = "social-updates-agent"
version = "0.1.3"
description = "Generate tweet/LinkedIn snippets from git commits, with optional Gemini polish."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "iamrealafzal", email = "afzalmlakdawala@gmail.com" }]
dependencies = [
    "google-generativeai>=0.7.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
social-updates = "social_updates.cli:main"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"


